# hiveory-ai

./: .gitignore  AGENTS.md  MODES.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.turbo/cache/: 6553227b98e326cc-manifest.json  6553227b98e326cc-meta.json  6553227b98e326cc.tar.zst  c565ad433db899ec-manifest.json  c565ad433db899ec-meta.json  c565ad433db899ec.tar.zst  ea95e6d4cc2a72d6-manifest.json  ea95e6d4cc2a72d6-meta.json  ea95e6d4cc2a72d6.tar.zst
BeeVoice/: README.md  package.json  tsconfig.json
BeeVoice/src/: core.ts  index.ts  types.ts  voice-processor.ts
BeeVoice/src/cleanup/: index.ts
BeeVoice/src/engine/: index.ts  model-cache.ts  whisper-cpp.ts
BeeVoice/src/hotkeys/: index.ts
BeeVoice/src/injection/: index.ts
BeeVoice/src/recorder/: index.ts
BeeVoice/tests/: cleanup.test.ts  core-purity.test.ts  engine.test.ts  types.test.ts  voice-processor.test.ts
Hive/: package.json  tsconfig.json  tsconfig.tsbuildinfo
Hive/src-tauri/: Cargo.toml  tauri.conf.json
Hive/src-tauri/capabilities/: default.json
Hive/src-tauri/icons/: icon.icns
Hive/src-tauri/src/: lib.rs  main.rs
Hive/src/app/: HomePage.tsx  globals.css  layout.tsx  page.tsx
Hive/src/components/: CommandPalette.tsx  Sidebar.tsx
Hive/src/lib/: queenbeeTools.test.ts  queenbeeTools.ts  tauri.ts
Nectar/: package.json
Nectar/src/: index.ts
Nectar/src/db/: index.ts  (+1 more)
Nectar/tests/: search.test.ts
QueenBee/: package.json
QueenBee/src/: index.ts  modes.ts
TaskComb/src/: index.ts
WorkerBees/: package.json  tsconfig.json
WorkerBees/src/: index.ts  launcher.ts
(+70 files in other folders)
